added more structure to html for Dashboard

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
                 <!-- Recent cities will be added here-->
             </ul>
         </div>
+        <div class="current-weather">
+            <h2>Current Weather</h2>
+            <div class="current-weather-card">
+                <div class="current-weather-card__city">City</div>
+                <div class="current-weather-card__temp">Temperature</div>
+                <div class="current-weather-card__weather">Weather</div>
+                <div class="current-weather-card__wind">Wind</div>
+                <div class="current-weather-card__humidity">Humidity</div>
+            </div>
         <div class="forecast">
+            <h2>5 Day Forecast</h2>
+            <div class="forecast-cards">
             <!-- Weather forecast cards will be displayed here -->
         </div>
     </div>
